<resources>
    <string name="app_name">Sharin_Diplom_Notes</string>
    <string name="action_settings">Настройки</string>
    <string name="textButtonNumberOne" translatable="false">1</string>
    <string name="textButtonNumberTwo" translatable="false">2</string>
    <string name="textButtonNumberThree" translatable="false">3</string>
    <string name="textButtonNumberFour" translatable="false">4</string>
    <string name="textButtonNumberFive" translatable="false">5</string>
    <string name="textButtonNumberSix" translatable="false">6</string>
    <string name="textButtonNumberSeven" translatable="false">7</string>
    <string name="textButtonNumberEight" translatable="false">8</string>
    <string name="textButtonNumberNine" translatable="false">9</string>
    <string name="textButtonNumberZero" translatable="false">0</string>
    <string name="textButtonNumberBackspace" translatable="false">C</string>
    <string name="textErrorPassword">Пароль неверный!</string>
    <string name="numberZero" translatable="false">0</string>
    <string name="numberOne" translatable="false">1</string>
    <string name="numberTwo" translatable="false">2</string>
    <string name="numberThree" translatable="false">3</string>
    <string name="numberFour" translatable="false">4</string>
    <string name="numberFive" translatable="false">5</string>
    <string name="numberSix" translatable="false">6</string>
    <string name="numberSeven" translatable="false">7</string>
    <string name="numberEight" translatable="false">8</string>
    <string name="numberNine" translatable="false">9</string>
    <string name="textViewNewPassword">Введите новый пароль:</string>
    <string name="textButtonSavePassword">Сохранить</string>
    <string name="editTextHintPassword">Введите новый пароль</string>
    <string name="textMessageSavePassword">Пароль сохранен!</string>
    <string name="textErrorLengthPassword">Пароль должен состоять из 4 цифр!</string>
    <string name="textTitleDialogDeleteNote">Удаление заметки</string>
    <string name="textQuestionDialogDelete">Вы уверены, что хотите удалить эту заметку?</string>
    <string name="textDialogPositiveButton">Да</string>
    <string name="textDialogNegativeButton">Нет</string>
    <string name="action_note">Заметка</string>
    <string name="textHintEditTextHeadlineNote">Заголовок</string>
    <string name="textCheckBoxDeadline">Срок выполнения заметки</string>
    <string name="textEditTextTextNote">Текст заметки</string>
    <string name="textEditTextDataDeadline">Дата выполнения</string>
    <string name="textMessageExit">Нажмите еще раз, чтобы выйти!</string>
    <string name="symbolSeparationValues" translatable="false">;</string>
    <string name="textMessageCreateDefaultNotes">Создание тестовых заметок!</string>
    <string name="textErrorMessageSaveNote">Для сохранения: тело заметки не должно быть пустым!</string>
    <string name="textMessageSaveNote">Заметка сохранена!</string>
    <string name="textMessageUpdateNote">Заметка обнавлена!</string>
    <string name="formatDateUpdate" translatable="false">dd.MM.yyyy</string>
    <string name="formatDate" translatable="false">dd.MM.yyyy</string>
</resources>
