<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NoteActivity"
    tools:showIn="@layout/activity_note">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        tools:context=".NoteActivity">

        <EditText
            android:id="@+id/editTextHeadlineNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/textHintEditTextHeadlineNote"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/editTextTextNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/textEditTextTextNote"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:lines="10" />

        <CheckBox
            android:id="@+id/chechboxDeadline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"
            android:text="@string/textCheckBoxDeadline"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="10dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/editTextDataDeadline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/textEditTextDataDeadline"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:inputType="date"
                android:enabled="false"/>

            <Button
                android:id="@+id/buttonCalendar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:layout_marginEnd="10dp"
                android:background="@android:drawable/ic_menu_month"
                />

        </LinearLayout>
    </LinearLayout>
</ScrollView>